# dispatcharr-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: test.yml
dispatcharr_mcp/: __init__.py  client.py  server.py
