[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dispatcharr-mcp"
version = "0.1.0"
description = "MCP server for Dispatcharr IPTV stream management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "dispatcharr", "iptv", "streaming"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
dispatcharr-mcp = "dispatcharr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dispatcharr_mcp"]
